kubernetes/company-namespace/backend-deployment-company.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-company
  namespace: company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service-company
  template:
    metadata:
      labels:
        app: backend-service-company
    spec:
      containers:
        - name: backend
          image: europe-west3-docker.pkg.dev/quixotic-market-402317/cloud-project-registry/cloud-project-backend:v0.0
          ports:
          - containerPort: 4000
      imagePullSecrets:
      - name: regcred
