kubernetes/company-namespace/frontend-service-company.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-company
  namespace: company
spec:
  type: ClusterIP
  selector:
    app: frontend-service-company
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
...
