kubernetes/company-namespace/company-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-ingress
  namespace: company
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: company.localhost
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 4001
      - path: /administration(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: administration-service
            port:
              number: 4002
      - path: /report(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: report-service
            port:
              number: 4003
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service-company
            port:
              number: 3000
  ingressClassName: nginx
