kubernetes/company-namespace/tls-ingress-company.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-company
  namespace: company
  annotations:
    #cert-manager.io/issuer: "example-issuer"
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - company.sportiq-connect.de
    secretName: tls-secret-company
  rules:
  - host: company.sportiq-connect.de
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 4001
      - path: /administration(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: administration-service
            port:
              number: 4002
      - path: /report(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: report-service
            port:
              number: 4003
      - path: /()(.*)
#      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service-company
            port:
              number: 3000
  ingressClassName: nginx
